# halbot

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  bot.py  build_daemon.spec  build_tray.spec  db.py  halbot_daemon_entry.py  halbot_tray.py  halbot_tray_entry.py  llm.py  pyproject.toml  requirements.txt  snap.html  start.bat  voice.py  voice_session.py
.claude/: settings.local.json
benchmarks/: __init__.py  __main__.py  results.py  runner.py  scenarios.py  stages.py
benchmarks/corpus/: __init__.py  generate.py
benchmarks/corpus/prompts/: voice_prompts.jsonl
benchmarks/corpus/texts/: tts_texts.txt
dashboard/: _stub.html  app.py  bridge.py  dev_server.py  event_stream.py  log_stream.py  paths.py
docs/: interactions.md  voice-pipeline.md
docs/mockups/dashboard/: halbot-print.html  halbot.html
docs/mockups/discord_interactions/: Halbot Flows v3.html  README.md  app-v3.jsx  chat-primitives-v2.jsx  flows-v3.jsx  interactions.md  voice-primitives.jsx
docs/plans/: 001-voice-text-decoupling.md  002-project-restructure.md  003-project-restructure-impl.md  004-project-restructure-phase1.md  005-project-restructure-phase2.md  006-project-restructure-phase3.md  007-gui-dashboard.md  007-step-1-proto.md  007-step-2-backend.md  007-step-3-frontend-scaffold.md  007-step-4-logs-panel.md  007-step-5-daemon-panel.md  007-step-6-config-panel.md  007-step-7-stats-and-tray.md  007-step-8-build-deploy.md  007-step-9-validation.md  008-analytics-events.md  014-discord-embed-flows-impl.md  016-voice-pipeline-benchmarks-impl.md  017-wake-variants-impl.md  018-transcript-capture-impl.md  020-static-stats-publish-impl.md  021-drop-pyinstaller-impl.md  022-design-refresh-impl.md  023-dashboard-dev-mode-impl.md  024-dashboard-stats-fixes-impl.md  README.md  voice-text-decoupling.md
docs/plans/reference/: 015-voice-integration-tests.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  SnapshotBanner.jsx  bridge.js  main.jsx  styles.css  tokens.js
frontend/src/components/: LevelPill.jsx  SidebarNarrow.jsx  SidebarWide.jsx  StatusBar.jsx  ToggleBtn.jsx  TopTabBar.jsx  WinTitleBar.jsx  navItems.jsx
frontend/src/panels/: Analytics.jsx  Config.jsx  Daemon.jsx  Emojis.jsx  Logs.jsx  Stats.jsx
frontend/src/panels/config/: ConfigRow.jsx  FieldInput.jsx
frontend/src/panels/daemon/: ActionBtn.jsx  MockBadge.jsx
frontend/src/panels/logs/: LogRow.jsx  useLogStream.js
frontend/src/panels/stats/: EmojiCell.jsx  HealthBanner.jsx  LatencyCard.jsx  MissingDataDrawer.jsx  MockData.js  Pagination.jsx  StatCard.jsx  WakeHistory.jsx
halbot/: __init__.py  _native.py  analytics.py  audio.py  bot.py  bot_ui.py  config.py  daemon.py  db.py  installer.py  interactions.py  llm.py  log_ring.py  logging_setup.py  mgmt_server.py  paths.py  secrets.py  slash.py  stats_publisher.py  transcript_log.py  tts.py  voice.py  voice_session.py
halbot/_gen/: __init__.py  mgmt_pb2.py  mgmt_pb2_grpc.py
halbot/prompts/: system_prompt.txt
halbot/publishers/: __init__.py  _stubs.py  s3.py
infra/: cloud-init-script.sh  main.tf
infra/cloudflare/: README.md  dns.tf  outputs.tf  providers.tf  r2.tf  terraform.tfvars.example  token.tf  variables.tf  versions.tf
prompts/: system_prompt.txt
proto/: mgmt.proto
scripts/: apply-r2-secrets.ps1  build.ps1  dedupe_sounds.py  deploy.bat  deploy.ps1  dev-dashboard.ps1  extract_transcripts.py  gen_proto.bat  gen_proto.ps1  install.ps1  migrate_v050.py  start-tray.ps1  update-daemon.bat  update-tray.bat
tests/: test_parse_intent_timeout.py  test_stats_publisher.py
tests/dashboard/: conftest.py  test_pagination.py  test_smoke.py  test_snapshot_mode.py  test_stats_panel.py
tray/: __init__.py  __main__.py  log_viewer.py  mgmt_client.py  service_ctl.py  tray.py
