[project]
name = "halbot"
version = "0.5.0"
description = "Discord soundboard management bot — daemon + tray skeleton"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
halbot-daemon = "halbot.daemon:main"
halbot-tray = "tray.tray:main"
halbot-dashboard = "dashboard.app:main"

[dependency-groups]
daemon = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
    "pywin32>=306",
    "discord.py[voice]>=2.5,<3",
    "discord-ext-voice-recv>=0.4",
    "requests>=2.31",
    "tinytag>=2.0",
    "pydub>=0.25",
    "numpy>=1.24",
    "faster-whisper>=1.0",
    "kokoro>=0.9",
    "soundfile>=0.12",
    "nvidia-cublas-cu12>=12.9.2.10",
    # kokoro -> misaki -> spacy.load("en_core_web_sm"). Not a transitive dep
    # of spacy itself; must be installed explicitly, otherwise uv sync prunes
    # it and the frozen bundle can't phonemize English. Installed from a wheel
    # URL because PyPI doesn't host spaCy models.
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
tray = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "pystray>=0.19",
    "pillow>=10",
    "pywin32>=306",
    "pywebview>=5.0",
    "psutil>=5.9",
]
build = [
    "pyinstaller>=6.3",
]
dev = []
benchmarks = [
    "faster-whisper>=1.0",
    "kokoro>=0.9",
    "soundfile>=0.12",
    "numpy>=1.24",
    "requests>=2.31",
    "pynvml>=11.5",
    "tabulate>=0.9",
    "scipy>=1.11",
]

[tool.uv]
default-groups = ["daemon", "tray", "build"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["halbot", "tray", "dashboard"]
# benchmarks/ is dev-only — not shipped in PyInstaller bundles.
