[project]
name = "halbot"
version = "0.5.0"
description = "Discord soundboard management bot — daemon + tray skeleton"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
halbot-daemon = "halbot.daemon:main"
halbot-tray = "tray.tray:main"
halbot-dashboard = "dashboard.app:main"

[dependency-groups]
daemon = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
    "pywin32>=306",
    "discord.py[voice]>=2.5,<3",
    "discord-ext-voice-recv>=0.4",
    "requests>=2.31",
    "tinytag>=2.0",
    "pydub>=0.25",
    "numpy>=1.24",
    "faster-whisper>=1.0",
    "kokoro>=0.9",
    "soundfile>=0.12",
    # Lower bound set by what torch==2.11+cu128 pins (cublas==12.8.4.1).
    # faster-whisper/ctranslate2 works with any cu12 series. Keep the
    # floor where torch resolves so benchmarks can install chatterbox.
    "nvidia-cublas-cu12>=12.8.4.1",
    # kokoro -> misaki -> spacy.load("en_core_web_sm"). Not a transitive dep
    # of spacy itself; must be installed explicitly, otherwise uv sync prunes
    # it and the frozen bundle can't phonemize English. Installed from a wheel
    # URL because PyPI doesn't host spaCy models.
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
tray = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "pystray>=0.19",
    "pillow>=10",
    "pywin32>=306",
    "pywebview>=5.0",
    "psutil>=5.9",
]
build = [
    "pyinstaller>=6.3",
]
dev = []
benchmarks = [
    "faster-whisper>=1.0",
    "kokoro>=0.9",
    "soundfile>=0.12",
    "numpy>=1.24",
    "requests>=2.31",
    "pynvml>=11.5",
    "tabulate>=0.9",
    "scipy>=1.11",
    # Declare torch directly so [tool.uv.sources] below can route it to
    # the CUDA index — kokoro pulls torch transitively, but sources only
    # apply to direct deps. Without this we end up with torch==CPU.
    "torch>=2.11",
    "torchaudio>=2.11",
    # chatterbox for GPU TTS comparisons. Its transitive deps (librosa,
    # diffusers, s3tokenizer, etc.) resolve cleanly once torch is CUDA.
    "chatterbox-tts>=0.1.7",
    # nemo-toolkit (parakeet STT) intentionally omitted — it depends on
    # NVIDIA-internal packages (nv-one-logger, not on PyPI) starting with
    # 2.x, and hits `signal.SIGKILL` on Windows. Install manually on Linux
    # if you want to benchmark parakeet; gated at runtime in stages.py.
]

[tool.uv]
default-groups = ["daemon", "tray", "build"]

# chatterbox-tts 0.1.7 pins torch==2.6.0 in its wheel metadata. We run
# torch 2.11+cu128 for CUDA on Windows. Override the pin — chatterbox
# actually runs fine on torch 2.11 (verified via smoke test), Resemble
# just hasn't bumped their dep range.
override-dependencies = [
    "torch>=2.11",
    "torchaudio>=2.11",
]

# PyPI's torch wheel is CPU-only. kokoro pulls torch transitively, so the
# default sync gave us torch==2.11.0+cpu. Benchmarks need CUDA torch for
# chatterbox (and any future GPU-TTS). Route torch/torchaudio to the
# PyTorch CUDA 12.8 index so `uv sync` keeps the +cu128 build.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["halbot", "tray", "dashboard"]
# benchmarks/ is dev-only — not shipped in PyInstaller bundles.
